# n64_dualshock

./: CMakeLists.txt  N64 DualShock (Final, inches).stl  N64 DualShock (Final, millimeters).stl  README.html  README.md  adrian_single_wire.hpp  adrian_single_wire_arduino.hpp  build_docs.sh  n64_dualshock.ino  n64_read_buttons_demo.ino.tmp  run_tests.sh  trinketTest1.ino.tmp.txt
console/: n64_read_buttons_demo.ino
docs/n64_read_buttons_demo/: N64_Arduino.pde
n64_read_buttons_demo/: n64_dualshock.ino.txt  n64_read_buttons_demo.ino
tests/: CMakeLists.txt  translate_tests  translate_tests.cpp
trinket/: button_translate.hpp  trinketTest1.ino.txt
trinketPS2/: N64.cpp  N64.hpp  button_translate.hpp  dualshock_cpp.ino  trinketPS2.ino  trinketPS2.ino.txt
trinketPS2/trinketloader_modified/trinketloader/: code.cpp  images.cpp
trinketPS2/trinketloader_skippow25/trinketloader/: images.cpp
